fix(css profile__name): add overflow properties
Wrap will not happen again

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,10 @@
   font-size: 42px;
   line-height: calc(48 / 42);
   font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 373px;
 }
 
 @media screen and (max-width: 890px) {
